# v2x_msgs

./: .gitignore  CMakeLists.txt  CUSTOM.md  HOTFIXES.md  LICENSE  README.md  USAGE_GUIDE.md  generate_deb_package.sh  package.xml
generator/: command-cxx.sh  command.sh  docker-generation-environment-build-and-run.sh  hotfix.py  package.xml  remove-duplicates.py
generator/Dockerfiles/: Dockerfile.environment
generator/hotfix/: ActionRequest.msg  ActionResponse.msg  AdvisorySpeed.msg  ApplicationList.msg  AttributeList.msg  Attributes.msg  ConnectionManeuverAssist.msg  DestinationPlace.msg  Distance.msg  EfcContainer.msg  GddStructure.msg  GicPart.msg  ISO14823Code.msg  InternationalSignApplicablePeriod.msg  LaneDataAttribute.msg  Position3D.msg  RawRxMessage.msg  RegionalExtension.msg  RestrictionUserType.msg  ValidityPeriods.msg
generator/msg/custom/lists/: CAMList.msg  RTCMEMList.msg
generator/msg/hotfix/: ActionRequest.msg  ApplicationList.msg  AttributeIdList.msg  Attributes.msg  ComputedLane.msg  ConnectionManeuverAssist.msg  Distance.msg  EventReportRequest.msg  FullPositionVector.msg  GetInstanceRs.msg  InternationalSignExemptedApplicablePeriod.msg  LaneInformation.msg  Position3D.msg  RegionalExtension.msg  RestrictionUserType.msg  ReturnStatus.msg
msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/: AdvisorySpeedList.msg  AdvisorySpeedType.msg  AllowedManeuvers.msg  Angle.msg  AntennaOffsetSet.msg  ApproachID.msg  BasicVehicleRole.msg  BatteryStatus.msg  ComputedLane.msg  ConnectingLane.msg  Connection.msg  ConnectionManeuverAssistAddGrpC.msg  ConnectionTrajectoryAddGrpC.msg  ConnectsToList.msg  DDateTime.msg  DDay.msg  DHour.msg  DMinute.msg  DMonth.msg  DOffset.msg  DSRCmsgID.msg  DSecond.msg  DYear.msg  DataParameters.msg  DeltaAngle.msg  DeltaTime.msg  DescriptiveName.msg  DrivenLineOffsetLg.msg  DrivenLineOffsetSm.msg  Elevation.msg  ElevationConfidence.msg  EmissionType.msg  EnabledLaneList.msg  ExceptionalCondition.msg  FuelType.msg  FullPositionVector.msg  GNSSstatus.msg  GenericLane.msg  HeadingConfidenceDSRC.msg  HeadingDSRC.msg  (+164 more)
msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/: AlphabetIndicator.msg  AviEriDateTime.msg  CS1.msg  CS2.msg  CS3.msg  CS4.msg  CS5.msg  CS7.msg  CS8.msg  CountryCode.msg  FreightContainerData.msg  GeoGraphicalLimit.msg  IssuerIdentifier.msg  LicPlateNumber.msg  ManufacturerIdentifier.msg  ServiceApplicationLimit.msg  ServiceNumber.msg  StartTime.msg  StopTime.msg  TaxCode.msg  Version.msg
msg/additional_modules/ISO19321IVIv2/: AbsolutePosition.msg  AbsolutePositionWAltitude.msg  AbsolutePositions.msg  AbsolutePositionsWAltitude.msg  AnyCatalogue.msg  AutomatedVehicleContainer.msg  AutomatedVehicleRule.msg  AvcPart.msg  (+94 more)
msg/cam/: BasicContainer.msg  BasicVehicleContainerHighFrequency.msg  BasicVehicleContainerLowFrequency.msg  CAM.msg  CamParameters.msg  CoopAwareness.msg  DangerousGoodsContainer.msg  EmergencyContainer.msg  GenerationDeltaTime.msg  HighFrequencyContainer.msg  LowFrequencyContainer.msg  PublicTransportContainer.msg  RSUContainerHighFrequency.msg  RescueContainer.msg  RoadWorksContainerBasic.msg  SafetyCarContainer.msg  SpecialTransportContainer.msg  SpecialVehicleContainer.msg
msg/cdd/: AccelerationConfidence.msg  AccelerationControl.msg  AccidentSubCauseCode.msg  ActionID.msg  AdverseWeatherConditionAdhesionSubCauseCode.msg  AdverseWeatherConditionExtremeWeatherConditionSubCauseCode.msg  AdverseWeatherConditionPrecipitationSubCauseCode.msg  AdverseWeatherConditionVisibilitySubCauseCode.msg  Altitude.msg  AltitudeConfidence.msg  AltitudeValue.msg  CauseCode.msg  CauseCodeType.msg  CenDsrcTollingZone.msg  CenDsrcTollingZoneID.msg  ClosedLanes.msg  CollisionRiskSubCauseCode.msg  Curvature.msg  CurvatureCalculationMode.msg  CurvatureConfidence.msg  CurvatureValue.msg  DangerousEndOfQueueSubCauseCode.msg  DangerousGoodsBasic.msg  DangerousGoodsExtended.msg  DangerousSituationSubCauseCode.msg  DeltaAltitude.msg  DeltaLatitude.msg  DeltaLongitude.msg  DeltaReferencePosition.msg  DigitalMap.msg  DriveDirection.msg  DrivingLaneStatus.msg  EmbarkationStatus.msg  EmergencyPriority.msg  EmergencyVehicleApproachingSubCauseCode.msg  EnergyStorageType.msg  EventHistory.msg  EventPoint.msg  ExteriorLights.msg  HardShoulderStatus.msg  (+95 more)
msg/cpm/: AngleConfidence.msg  AnimalSubclass.msg  AnimalSubclassType.msg  AreaCircular.msg  AreaEllipse.msg  AreaPolygon.msg  AreaRadial.msg  AreaRectangle.msg  CPM.msg  CartesianAngle.msg  CartesianAngleValue.msg  ClassConfidence.msg  CollectivePerceptionMessage.msg  CpmManagementContainer.msg  CpmParameters.msg  DetectionArea.msg  DistanceConfidence.msg  DistanceValue.msg  DynamicStatus.msg  FreeSpaceAddendum.msg  FreeSpaceAddendumContainer.msg  FreeSpaceArea.msg  FreeSpaceConfidence.msg  FrontOverhang.msg  HitchPointOffset.msg  Identifier.msg  LongitudinalLanePosition.msg  LongitudinalLanePositionConfidence.msg  LongitudinalLanePositionValue.msg  MatchedPosition.msg  NodeOffsetPointZ.msg  NumberOfPerceivedObjects.msg  ObjectAge.msg  ObjectClass.msg  ObjectClassDescription.msg  ObjectConfidence.msg  ObjectDimension.msg  ObjectDimensionConfidence.msg  ObjectDimensionValue.msg  ObjectDistanceWithConfidence.msg  (+40 more)
msg/denm/: AlacarteContainer.msg  DENM.msg  DecentralizedEnvironmentalNotificationMessage.msg  DefaultValidity.msg  ImpactReductionContainer.msg  LocationContainer.msg  ManagementContainer.msg  ReferenceDenms.msg  RoadWorksContainerExtended.msg  SituationContainer.msg  StationaryVehicleContainer.msg  Termination.msg
msg/ivim/: IVIM.msg
msg/lists/: CPMList.msg  DENMList.msg  IVIMList.msg  MAPEMList.msg  RawRxMessageList.msg  RawTxMessageList.msg  SPATEMList.msg  SREMList.msg  SSEMList.msg
msg/mapem/: MAPEM.msg
msg/rtcmem/: RTCMEM.msg
msg/spatem/: SPATEM.msg
msg/srem/: SREM.msg
msg/ssem/: SSEM.msg
msg/vccontainer/: AreaType.msg  AreaTypeInfo.msg  DecapStatus.msg  EncapType.msg  ItsAID.msg  LocalInfo.msg  MACAddress.msg  PositionInfo.msg  RawTxMessage.msg  RxInfo.msg  RxSecurity.msg  SSP.msg  SSPLen.msg  TimeVal.msg  TxInfo.msg  TxSecurity.msg
(+151 files in other folders)
