cmake_minimum_required(VERSION 3.5)
project(v2x_msgs)

# Default to C99
if (NOT CMAKE_C_STANDARD)
    set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if (NOT CMAKE_CXX_STANDARD)
    set(CMAKE_CXX_STANDARD 14)
endif ()

if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES 'Clang')
    add_compile_options(-Wall -Wextra -Wpedantic)
endif ()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(std_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)


rosidl_generate_interfaces(${PROJECT_NAME}
"msg/cam/RoadWorksContainerBasic.msg"
"msg/cam/BasicVehicleContainerHighFrequency.msg"
"msg/cam/GenerationDeltaTime.msg"
"msg/cam/EmergencyContainer.msg"
"msg/cam/BasicContainer.msg"
"msg/cam/DangerousGoodsContainer.msg"
"msg/cam/SpecialVehicleContainer.msg"
"msg/cam/SpecialTransportContainer.msg"
"msg/cam/SafetyCarContainer.msg"
"msg/cam/LowFrequencyContainer.msg"
"msg/cam/CoopAwareness.msg"
"msg/cam/PublicTransportContainer.msg"
"msg/cam/CAM.msg"
"msg/cam/RescueContainer.msg"
"msg/cam/HighFrequencyContainer.msg"
"msg/cam/BasicVehicleContainerLowFrequency.msg"
"msg/cam/CamParameters.msg"
"msg/cam/RSUContainerHighFrequency.msg"
"msg/ivim/IVIM.msg"
"msg/vccontainer/RawRxMessage.msg"
"msg/vccontainer/RawTxMessage.msg"
"msg/vccontainer/AreaTypeInfo.msg"
"msg/vccontainer/MACAddress.msg"
"msg/vccontainer/RxInfo.msg"
"msg/vccontainer/DecapStatus.msg"
"msg/vccontainer/ItsAID.msg"
"msg/vccontainer/RxSecurity.msg"
"msg/vccontainer/EncapType.msg"
"msg/vccontainer/AreaType.msg"
"msg/vccontainer/TxSecurity.msg"
"msg/vccontainer/TxInfo.msg"
"msg/vccontainer/SSPLen.msg"
"msg/vccontainer/LocalInfo.msg"
"msg/vccontainer/TimeVal.msg"
"msg/vccontainer/PositionInfo.msg"
"msg/vccontainer/SSP.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/Weight.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/GddAttribute.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/InternationalSignExemptedApplicablePeriod.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/InternationalSignApplicableVehicleDimensions.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/Distance.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/MonthDay.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/GddStructure.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/DestinationType.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/InternationalSignDirectionalFlowOfLane.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/InternationalSignRateOfIncline.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/DayOfWeek.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/DestinationRoad.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/DDDIOLIST.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/DestinationRoads.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/DestinationPlace.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/DDDIO.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/InternationalSignNumberOfLane.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/RepeatingPeriodDayTypes.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/InternationalSignDistanceBetweenVehicles.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/InternationalSignSpeedLimits.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/InternationalSignApplicablePeriod.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/DestinationRoadType.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/CodeUnits.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/DistanceOrDuration.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/InternationalSignDestinationInformation.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/DestinationPlaces.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/InternationalSignSection.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/GddAttributes.msg"
"msg/is_ts103301/iso-patched/ISO14823-missing/HoursMinutes.msg"
"msg/is_ts103301/iso-patched/ISO24534-3_ElectronicRegistrationIdentificationVehicleDataModule/EuVehicleCategoryO.msg"
"msg/is_ts103301/iso-patched/ISO24534-3_ElectronicRegistrationIdentificationVehicleDataModule/EuVehicleCategoryL.msg"
"msg/is_ts103301/iso-patched/ISO24534-3_ElectronicRegistrationIdentificationVehicleDataModule/Iso3833VehicleType.msg"
"msg/is_ts103301/iso-patched/ISO24534-3_ElectronicRegistrationIdentificationVehicleDataModule/EuVehicleCategoryM.msg"
"msg/is_ts103301/iso-patched/ISO24534-3_ElectronicRegistrationIdentificationVehicleDataModule/EuVehicleCategoryN.msg"
"msg/is_ts103301/iso-patched/ISO24534-3_ElectronicRegistrationIdentificationVehicleDataModule/EuVehicleCategoryCode.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/VehicleWeightLimits.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ChannelId.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ValidityOfContract.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/GetStampedRq.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/FutureCharacteristics.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/CopValue.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/CreditRs.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ContractVehicle.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ReceiptData2.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/PayUnit.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/AddRq.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/SessionClass.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/GetInstanceRq.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ChannelRq.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/VehicleWeightLaden.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/PassengerCapacity.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ReceiptData1.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/PaymentMeans.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ReceiptServicePart.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/Int1.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/SessionLocation.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/EnvironmentalCharacteristics.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ReceiptOBUId.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/Int3.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ReceiptICCId.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/Int4.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/DateAndTime.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/SubRq.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/GetInstanceRs.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/VehicleAuthenticator.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/EFCContextMark.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/VehicleSpecificCharacteristics.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/EquipmentStatus.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/SetInstanceRq.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ResultOp.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/VehicleAxles.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/SignedValue.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/DateCompact.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/PaymentMeansUnit.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ReceiptContract.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/UnitType.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ReceiptText.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/LPN.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/VehicleLicencePlateNumber.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/CopyRq.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ReceiptAuthenticator.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ActualNumberOfPassengers.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/DescriptiveCharacteristics.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/EuroValue.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/TractorAxles.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/TrailerDetails.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/PurseBalance.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ReceiptData.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/DebitRq.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ResultFin.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ExhaustEmissionValues.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/PaymentFee.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ContractSerialNumber.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/VehicleCurrentMaxTrainWeight.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/Int2.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ContractValidity.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/CreditRq.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/SoundLevel.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/VehicleDimensions.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/DieselEmissionValues.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/AxleWeightLimits.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/VehicleClass.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ReceiptDistance.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/TrailerLicencePlateNumber.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/PaymentMeansBalance.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/EngineCharacteristics.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/VehicleTotalDistance.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ReceiptFinancialPart.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ICCId.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/Provider.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/EquipmentOBUId.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/GetStampedRs.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ChannelRs.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/VehicleIdentificationNumber.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/SetMMIRq.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/TrailerAxles.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/CO2EmissionValue.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ReceiptServiceSerialNumber.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/PersonalAccountNumber.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/PaymentSecurityData.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/ContractAuthenticator.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/Engine.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/DebitRs.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcApplicationv6/SetStampedRq.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/File.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/SetRequest.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/Profile.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/Time.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/EfcContainer.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/SetResponse.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/VST.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/DsrcEID.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/DSRCApplicationEntityID.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/BeaconID.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/FileType.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/EventReportRequest.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/InitialisationRequest.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/BroadcastPool.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/AttributeList.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/Directory.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/AttributeIdList.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/TAPDUs.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/ActionResponse.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/ActionType.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/GetResponse.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/GetRequest.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/ActionRequest.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/ObeConfiguration.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/Attributes.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/EventType.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/FileName.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/InitialisationResponse.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/TAPDUsGeneric.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/EventReportResponse.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/ApplicationList.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/Record.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/BST.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/ReturnStatus.msg"
"msg/is_ts103301/iso-patched/ISO14906_2018_EfcDsrcGenericv7/ApplicationContextMark.msg"
"msg/additional_modules/ISO19321IVIv2/Text.msg"
"msg/additional_modules/ISO19321IVIv2/AbsolutePositionsWAltitude.msg"
"msg/additional_modules/ISO19321IVIv2/TrainCharacteristics.msg"
"msg/additional_modules/ISO19321IVIv2/IviContainers.msg"
"msg/additional_modules/ISO19321IVIv2/GeographicLocationContainer.msg"
"msg/additional_modules/ISO19321IVIv2/RSCode.msg"
"msg/additional_modules/ISO19321IVIv2/AbsolutePositions.msg"
"msg/additional_modules/ISO19321IVIv2/TreatmentType.msg"
"msg/additional_modules/ISO19321IVIv2/LoadType.msg"
"msg/additional_modules/ISO19321IVIv2/GapBetweenVehicles.msg"
"msg/additional_modules/ISO19321IVIv2/PolygonalLine.msg"
"msg/additional_modules/ISO19321IVIv2/VcClass.msg"
"msg/additional_modules/ISO19321IVIv2/MapReference.msg"
"msg/additional_modules/ISO19321IVIv2/ZoneIds.msg"
"msg/additional_modules/ISO19321IVIv2/GlcPart.msg"
"msg/additional_modules/ISO19321IVIv2/LanePositions.msg"
"msg/additional_modules/ISO19321IVIv2/VehicleCharacteristicsFixValuesList.msg"
"msg/additional_modules/ISO19321IVIv2/ISO14823Code.msg"
"msg/additional_modules/ISO19321IVIv2/LaneIds.msg"
"msg/additional_modules/ISO19321IVIv2/ComputedSegment.msg"
"msg/additional_modules/ISO19321IVIv2/PriorityLevel.msg"
"msg/additional_modules/ISO19321IVIv2/SaeAutomationLevel.msg"
"msg/additional_modules/ISO19321IVIv2/IviPurpose.msg"
"msg/additional_modules/ISO19321IVIv2/TrailerCharacteristicsList.msg"
"msg/additional_modules/ISO19321IVIv2/MlcPart.msg"
"msg/additional_modules/ISO19321IVIv2/RoadSurfaceDynamicCharacteristics.msg"
"msg/additional_modules/ISO19321IVIv2/GoodsType.msg"
"msg/additional_modules/ISO19321IVIv2/DeltaPositions.msg"
"msg/additional_modules/ISO19321IVIv2/IviStatus.msg"
"msg/additional_modules/ISO19321IVIv2/ValidityPeriods.msg"
"msg/additional_modules/ISO19321IVIv2/TextContainer.msg"
"msg/additional_modules/ISO19321IVIv2/RSCUnit.msg"
"msg/additional_modules/ISO19321IVIv2/GicPart.msg"
"msg/additional_modules/ISO19321IVIv2/VcOption.msg"
"msg/additional_modules/ISO19321IVIv2/ISO14823Attribute.msg"
"msg/additional_modules/ISO19321IVIv2/AvcPart.msg"
"msg/additional_modules/ISO19321IVIv2/LaneStatus.msg"
"msg/additional_modules/ISO19321IVIv2/VehicleCharacteristicsRangesList.msg"
"msg/additional_modules/ISO19321IVIv2/IviIdentificationNumbers.msg"
"msg/additional_modules/ISO19321IVIv2/ConstraintTextLines1.msg"
"msg/additional_modules/ISO19321IVIv2/LaneDelimitation.msg"
"msg/additional_modules/ISO19321IVIv2/DriverCharacteristics.msg"
"msg/additional_modules/ISO19321IVIv2/AutomatedVehicleContainer.msg"
"msg/additional_modules/ISO19321IVIv2/LaneMarkingStatus.msg"
"msg/additional_modules/ISO19321IVIv2/RoadConfigurationContainer.msg"
"msg/additional_modules/ISO19321IVIv2/FrictionCoefficient.msg"
"msg/additional_modules/ISO19321IVIv2/AbsolutePosition.msg"
"msg/additional_modules/ISO19321IVIv2/LaneInformation.msg"
"msg/additional_modules/ISO19321IVIv2/WearLevel.msg"
"msg/additional_modules/ISO19321IVIv2/MarkingColour.msg"
"msg/additional_modules/ISO19321IVIv2/TextLines.msg"
"msg/additional_modules/ISO19321IVIv2/AnyCatalogue.msg"
"msg/additional_modules/ISO19321IVIv2/VehicleCharacteristicsFixValues.msg"
"msg/additional_modules/ISO19321IVIv2/BankingAngle.msg"
"msg/additional_modules/ISO19321IVIv2/LaneCharacteristics.msg"
"msg/additional_modules/ISO19321IVIv2/TrailerCharacteristicsFixValuesList.msg"
"msg/additional_modules/ISO19321IVIv2/LayoutComponent.msg"
"msg/additional_modules/ISO19321IVIv2/RccPart.msg"
"msg/additional_modules/ISO19321IVIv2/IviContainer.msg"
"msg/additional_modules/ISO19321IVIv2/MaterialType.msg"
"msg/additional_modules/ISO19321IVIv2/PlatooningRules.msg"
"msg/additional_modules/ISO19321IVIv2/ConstraintTextLines2.msg"
"msg/additional_modules/ISO19321IVIv2/GeneralIviContainer.msg"
"msg/additional_modules/ISO19321IVIv2/TrailerCharacteristics.msg"
"msg/additional_modules/ISO19321IVIv2/IviStructure.msg"
"msg/additional_modules/ISO19321IVIv2/LaneConfiguration.msg"
"msg/additional_modules/ISO19321IVIv2/VcCode.msg"
"msg/additional_modules/ISO19321IVIv2/MapLocationContainer.msg"
"msg/additional_modules/ISO19321IVIv2/RoadSignCodes.msg"
"msg/additional_modules/ISO19321IVIv2/MlcParts.msg"
"msg/additional_modules/ISO19321IVIv2/MaxLenghtOfPlatoon.msg"
"msg/additional_modules/ISO19321IVIv2/GlcParts.msg"
"msg/additional_modules/ISO19321IVIv2/IviLaneWidth.msg"
"msg/additional_modules/ISO19321IVIv2/ConnectedDenms.msg"
"msg/additional_modules/ISO19321IVIv2/RscPart.msg"
"msg/additional_modules/ISO19321IVIv2/VehicleCharacteristicsRanges.msg"
"msg/additional_modules/ISO19321IVIv2/AutomatedVehicleRule.msg"
"msg/additional_modules/ISO19321IVIv2/Depth.msg"
"msg/additional_modules/ISO19321IVIv2/SaeAutomationLevels.msg"
"msg/additional_modules/ISO19321IVIv2/RoadSurfaceStaticCharacteristics.msg"
"msg/additional_modules/ISO19321IVIv2/Segment.msg"
"msg/additional_modules/ISO19321IVIv2/Zid.msg"
"msg/additional_modules/ISO19321IVIv2/Condition.msg"
"msg/additional_modules/ISO19321IVIv2/AutomatedVehicleRules.msg"
"msg/additional_modules/ISO19321IVIv2/TractorCharacteristics.msg"
"msg/additional_modules/ISO19321IVIv2/IviIdentificationNumber.msg"
"msg/additional_modules/ISO19321IVIv2/TcPart.msg"
"msg/additional_modules/ISO19321IVIv2/AbsolutePositionWAltitude.msg"
"msg/additional_modules/ISO19321IVIv2/DeltaPosition.msg"
"msg/additional_modules/ISO19321IVIv2/IviType.msg"
"msg/additional_modules/ISO19321IVIv2/VehicleCharacteristicsList.msg"
"msg/additional_modules/ISO19321IVIv2/Zone.msg"
"msg/additional_modules/ISO19321IVIv2/CompleteVehicleCharacteristics.msg"
"msg/additional_modules/ISO19321IVIv2/Direction.msg"
"msg/additional_modules/ISO19321IVIv2/TrailerCharacteristicsRangesList.msg"
"msg/additional_modules/ISO19321IVIv2/RoadSurfaceContainer.msg"
"msg/additional_modules/ISO19321IVIv2/LayoutComponents.msg"
"msg/additional_modules/ISO19321IVIv2/MaxNoOfVehicles.msg"
"msg/additional_modules/ISO19321IVIv2/DefinitionAccuracy.msg"
"msg/additional_modules/ISO19321IVIv2/PlatooningRule.msg"
"msg/additional_modules/ISO19321IVIv2/LayoutContainer.msg"
"msg/additional_modules/ISO19321IVIv2/LaneType.msg"
"msg/additional_modules/ISO19321IVIv2/DeltaReferencePositions.msg"
"msg/additional_modules/ISO19321IVIv2/ISO14823Attributes.msg"
"msg/additional_modules/ISO19321IVIv2/IviManagementContainer.msg"
"msg/additional_modules/ISO19321IVIv2/ComparisonOperator.msg"
"msg/additional_modules/TS17419_2014_CITSapplMgmtIDs/Ext3.msg"
"msg/additional_modules/TS17419_2014_CITSapplMgmtIDs/Ext1.msg"
"msg/additional_modules/TS17419_2014_CITSapplMgmtIDs/VarLengthNumber.msg"
"msg/additional_modules/TS17419_2014_CITSapplMgmtIDs/VarLengthNumber2.msg"
"msg/additional_modules/TS17419_2014_CITSapplMgmtIDs/Ext2.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/CS4.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/StopTime.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/TaxCode.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/AviEriDateTime.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/CS3.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/IssuerIdentifier.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/CS1.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/CS2.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/ManufacturerIdentifier.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/LicPlateNumber.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/CS8.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/Version.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/FreightContainerData.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/ServiceNumber.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/CountryCode.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/AlphabetIndicator.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/StartTime.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/CS7.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/GeoGraphicalLimit.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/CS5.msg"
"msg/additional_modules/ISO14816_AVIAEINumberingAndDataStructures/ServiceApplicationLimit.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RTCMcorrections.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/DHour.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/DMonth.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegLaneAttributes.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RoadSegment.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/OffsetB16.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneAttributesBike.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/NodeXY24b.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SemiMinorAxisAccuracy.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RoadSegmentList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/IntersectionStatusObject.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/DrivenLineOffsetLg.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/OffsetB13.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RequestorDescriptionAddGrpC.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/MovementEventAddGrpC.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegPosition3D.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RestrictionClassID.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RoadSegmentID.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/DescriptiveName.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegSignalRequestPackage.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneConnectionID.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/PriorityRequestType.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SpeedAdvice.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/IntersectionAccessPoint.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SignalHeadLocationList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/ScaleB12.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/MovementEventList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/ConnectsToList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RejectedReason.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/OffsetB11.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/AdvisorySpeed.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneAttributesParking.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/VehicleType.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/ItsStationPositionList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/EnabledLaneList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/VehicleID.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegulatorySpeedLimit.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/ComputedLane.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneDataAttribute.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/NodeOffsetPointXY.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/NodeLink.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RestrictionUserTypeAddGrpC.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/TransitVehicleOccupancy.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/Velocity.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/Connection.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RestrictionClassList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneAttributesCrosswalk.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/VehicleHeight.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SpeedLimitType.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LayerType.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegMovementState.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/NodeXY.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/AllowedManeuvers.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/TimeConfidence.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/ApproachID.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/PrioritizationResponseStatus.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SignalRequesterInfo.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RequestImportanceLevel.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneWidth.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/MovementList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SpeedConfidenceDSRC.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RTCMheader.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/IntersectionState.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/PositionalAccuracy.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegAdvisorySpeed.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegMapData.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/TransmissionAndSpeed.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegSignalRequestMessage.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/MsgCount.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/EmissionType.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/NodeSetXY.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/ExceptionalCondition.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/ThrottleConfidence.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/IntersectionGeometry.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/NodeAttributeXY.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SignalRequest.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/IntersectionStateList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/IntersectionGeometryList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneID.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SPAT.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegionalExtension.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneAttributesTrackedVehicle.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RoadLaneSetList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/HeadingConfidenceDSRC.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneAttributesStriping.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegIntersectionGeometry.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneAttributesSidewalk.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneAttributesBarrier.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/IntersectionStateAddGrpC.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegRTCMcorrections.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/DSecond.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/Elevation.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/NodeLLmD64b.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegSignalStatusMessage.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SignalControlZone.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/NodeAttributeSetAddGrpC.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneAttributes.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LayerID.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/MapDataAddGrpC.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SemiMajorAxisOrientation.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SignalStatusPackageAddGrpC.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/HeadingDSRC.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/Position3DAddGrpC.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RestrictionClassAssignment.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/OffsetB10.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/MergeDivergeNodeAngle.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegRequestorDescription.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RoadwayCrownAngle.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/TimeMark.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegRestrictionUserType.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/AdvisorySpeedList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/WaitOnStopline.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/GNSSstatus.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/IntersectionReferenceID.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/PrioritizationResponseList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RestrictionUserTypeList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/BasicVehicleRole.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/BatteryStatus.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SignalRequestPackage.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/Node.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneSharing.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SignalStatusMessage.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SignalGroupID.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RTCMRevision.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/TemporaryID.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/DDay.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/DDateTime.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RoadRegulatorID.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/DMinute.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/TransitVehicleStatus.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/PrioritizationResponse.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/ConnectionManeuverAssistAddGrpC.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneDirection.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/TimeIntervalConfidence.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/ConnectingLane.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/ConnectionManeuverAssist.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/AdvisorySpeedType.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/PedestrianBicycleDetect.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SignalStatusPackage.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/ConnectionTrajectoryAddGrpC.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegNodeOffsetPointXY.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SignalRequestMessage.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneAttributesVehicle.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/IntersectionID.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/MovementState.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegSignalRequest.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SpeedandHeadingandThrottleConfidence.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegionId.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegRoadSegment.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegSignalStatus.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/TimeChangeDetails.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/NodeXY22b.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SignalStatusPackageList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/GenericLane.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/PositionConfidence.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneDataAttributeList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegConnectionManeuverAssist.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SemiMajorAxisAccuracy.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SignalStatusList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/DrivenLineOffsetSm.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/OffsetB14.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/MovementPhaseState.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneTypeAttributes.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/ManeuverAssistList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegLaneDataAttribute.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SpeedLimitList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/NodeXY20b.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/FuelType.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/NodeAttributeXYList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SegmentAttributeXY.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/PositionConfidenceSet.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/AntennaOffsetSet.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/ItsStationPosition.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/NodeXY32b.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/Position3D.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/ZoneLength.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RestrictionAppliesTo.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/TransmissionState.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SignalRequestList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/LaneAttributesAddGrpC.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegRequestorType.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegComputedLane.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegSPAT.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/PtvRequestType.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/DataParameters.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RTCMmessage.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/FullPositionVector.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/MinuteOfTheYear.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/OverlayLaneList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/NodeAttributeSetXY.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RoadSegmentReferenceID.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/DYear.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/Angle.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RequestorPositionVector.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RequestSubRole.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/OffsetB12.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/MapData.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/DeltaTime.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegIntersectionState.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/NodeListXY.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RequestID.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RTCMmessageList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RequestorType.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SignalStatus.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/TimeReference.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RequestorDescription.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SegmentAttributeXYList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegSignalControlZone.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/SignalHeadLocation.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/DOffset.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/ElevationConfidence.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegGenericLane.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/OffsetB09.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RestrictionUserType.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/MovementEvent.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegNodeAttributeSetXY.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/DSRCmsgID.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegMovementEvent.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/DeltaAngle.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/RegSignalStatusPackage.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/PreemptPriorityList.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/NodeXY26b.msg"
"msg/additional_modules/ISO-TS-19091-addgrp-C-2018-patched/NodeXY28b.msg"
"msg/lists/SPATEMList.msg"
"msg/lists/SREMList.msg"
"msg/lists/DENMList.msg"
"msg/lists/RTCMEMList.msg"
"msg/lists/SSEMList.msg"
"msg/lists/IVIMList.msg"
"msg/lists/MAPEMList.msg"
"msg/lists/RawTxMessageList.msg"
"msg/lists/CPMList.msg"
"msg/lists/RawRxMessageList.msg"
"msg/lists/CAMList.msg"
"msg/spatem/SPATEM.msg"
"msg/srem/SREM.msg"
"msg/mapem/MAPEM.msg"
"msg/denm/DENM.msg"
"msg/denm/LocationContainer.msg"
"msg/denm/RoadWorksContainerExtended.msg"
"msg/denm/AlacarteContainer.msg"
"msg/denm/DefaultValidity.msg"
"msg/denm/DecentralizedEnvironmentalNotificationMessage.msg"
"msg/denm/Termination.msg"
"msg/denm/ManagementContainer.msg"
"msg/denm/ImpactReductionContainer.msg"
"msg/denm/ReferenceDenms.msg"
"msg/denm/StationaryVehicleContainer.msg"
"msg/denm/SituationContainer.msg"
"msg/cpm/OriginatingVehicleContainer.msg"
"msg/cpm/ObjectDistanceWithConfidence.msg"
"msg/cpm/ObjectClassDescription.msg"
"msg/cpm/NumberOfPerceivedObjects.msg"
"msg/cpm/WGS84AngleValue.msg"
"msg/cpm/TimeOfMeasurement.msg"
"msg/cpm/ObjectDimension.msg"
"msg/cpm/CpmParameters.msg"
"msg/cpm/ShadowingApplies.msg"
"msg/cpm/OtherSublassType.msg"
"msg/cpm/HitchPointOffset.msg"
"msg/cpm/AreaCircular.msg"
"msg/cpm/CPM.msg"
"msg/cpm/Range.msg"
"msg/cpm/AnimalSubclassType.msg"
"msg/cpm/PersonSubclass.msg"
"msg/cpm/VehicleSensorProperties.msg"
"msg/cpm/OtherSubclass.msg"
"msg/cpm/MatchedPosition.msg"
"msg/cpm/PolyPointList.msg"
"msg/cpm/PerceivedObjectContainer.msg"
"msg/cpm/SensorType.msg"
"msg/cpm/ObjectClass.msg"
"msg/cpm/VehicleSensor.msg"
"msg/cpm/AreaEllipse.msg"
"msg/cpm/SensorIdList.msg"
"msg/cpm/CollectivePerceptionMessage.msg"
"msg/cpm/LongitudinalLanePosition.msg"
"msg/cpm/DistanceConfidence.msg"
"msg/cpm/VehicleSensorPropertyList.msg"
"msg/cpm/SensorInformation.msg"
"msg/cpm/WGS84Angle.msg"
"msg/cpm/LongitudinalLanePositionValue.msg"
"msg/cpm/SensorHeight.msg"
"msg/cpm/TrailerData.msg"
"msg/cpm/AreaRectangle.msg"
"msg/cpm/FrontOverhang.msg"
"msg/cpm/ObjectConfidence.msg"
"msg/cpm/DetectionArea.msg"
"msg/cpm/Identifier.msg"
"msg/cpm/CpmManagementContainer.msg"
"msg/cpm/AnimalSubclass.msg"
"msg/cpm/ObjectDimensionConfidence.msg"
"msg/cpm/RearOverhang.msg"
"msg/cpm/SensorInformationContainer.msg"
"msg/cpm/OffsetPoint.msg"
"msg/cpm/PerceivedObject.msg"
"msg/cpm/DistanceValue.msg"
"msg/cpm/RefPointId.msg"
"msg/cpm/YSensorOffset.msg"
"msg/cpm/PersonSubclassType.msg"
"msg/cpm/TrailerDataContainer.msg"
"msg/cpm/AreaRadial.msg"
"msg/cpm/VehicleSubclass.msg"
"msg/cpm/StationDataContainer.msg"
"msg/cpm/ObjectDimensionValue.msg"
"msg/cpm/PerceivedObjectContainerSegmentInfo.msg"
"msg/cpm/FreeSpaceArea.msg"
"msg/cpm/NodeOffsetPointZ.msg"
"msg/cpm/CartesianAngle.msg"
"msg/cpm/ObjectAge.msg"
"msg/cpm/CartesianAngleValue.msg"
"msg/cpm/ObjectRefPoint.msg"
"msg/cpm/AngleConfidence.msg"
"msg/cpm/SemiRangeLength.msg"
"msg/cpm/ClassConfidence.msg"
"msg/cpm/FreeSpaceAddendumContainer.msg"
"msg/cpm/FreeSpaceConfidence.msg"
"msg/cpm/VehicleSubclassType.msg"
"msg/cpm/AreaPolygon.msg"
"msg/cpm/SegmentCount.msg"
"msg/cpm/LongitudinalLanePositionConfidence.msg"
"msg/cpm/DynamicStatus.msg"
"msg/cpm/SpeedExtended.msg"
"msg/cpm/XSensorOffset.msg"
"msg/cpm/ZSensorOffset.msg"
"msg/cpm/OriginatingRSUContainer.msg"
"msg/cpm/SpeedValueExtended.msg"
"msg/cpm/Radius.msg"
"msg/cpm/FreeSpaceAddendum.msg"
"msg/cdd/HardShoulderStatus.msg"
"msg/cdd/CauseCode.msg"
"msg/cdd/VerticalAcceleration.msg"
"msg/cdd/SpeedConfidence.msg"
"msg/cdd/PerformanceClass.msg"
"msg/cdd/HazardousLocationDangerousCurveSubCauseCode.msg"
"msg/cdd/WheelBaseVehicle.msg"
"msg/cdd/TimestampIts.msg"
"msg/cdd/PathDeltaTime.msg"
"msg/cdd/EventHistory.msg"
"msg/cdd/SteeringWheelAngleValue.msg"
"msg/cdd/VehicleMass.msg"
"msg/cdd/CurvatureConfidence.msg"
"msg/cdd/PosConfidenceEllipse.msg"
"msg/cdd/Speed.msg"
"msg/cdd/SpeedValue.msg"
"msg/cdd/VehicleWidth.msg"
"msg/cdd/EnergyStorageType.msg"
"msg/cdd/StationarySince.msg"
"msg/cdd/TrafficConditionSubCauseCode.msg"
"msg/cdd/TransmissionInterval.msg"
"msg/cdd/DriveDirection.msg"
"msg/cdd/HeightLonCarr.msg"
"msg/cdd/RelevanceDistance.msg"
"msg/cdd/DeltaReferencePosition.msg"
"msg/cdd/ProtectedZoneType.msg"
"msg/cdd/Longitude.msg"
"msg/cdd/HumanProblemSubCauseCode.msg"
"msg/cdd/AdverseWeatherConditionPrecipitationSubCauseCode.msg"
"msg/cdd/ProtectedCommunicationZonesRSU.msg"
"msg/cdd/EventPoint.msg"
"msg/cdd/PositionOfPillars.msg"
"msg/cdd/Temperature.msg"
"msg/cdd/AdverseWeatherConditionVisibilitySubCauseCode.msg"
"msg/cdd/YawRateConfidence.msg"
"msg/cdd/HazardousLocationObstacleOnTheRoadSubCauseCode.msg"
"msg/cdd/AccelerationConfidence.msg"
"msg/cdd/DangerousSituationSubCauseCode.msg"
"msg/cdd/PositionOfOccupants.msg"
"msg/cdd/PosFrontAx.msg"
"msg/cdd/AdverseWeatherConditionAdhesionSubCauseCode.msg"
"msg/cdd/SubCauseCodeType.msg"
"msg/cdd/SteeringWheelAngle.msg"
"msg/cdd/WrongWayDrivingSubCauseCode.msg"
"msg/cdd/InformationQuality.msg"
"msg/cdd/VDS.msg"
"msg/cdd/NumberOfOccupants.msg"
"msg/cdd/StationaryVehicleSubCauseCode.msg"
"msg/cdd/StationType.msg"
"msg/cdd/TrafficRule.msg"
"msg/cdd/RestrictedTypes.msg"
"msg/cdd/VerticalAccelerationValue.msg"
"msg/cdd/ExteriorLights.msg"
"msg/cdd/HeadingValue.msg"
"msg/cdd/ProtectedZoneRadius.msg"
"msg/cdd/SemiAxisLength.msg"
"msg/cdd/DigitalMap.msg"
"msg/cdd/CurvatureCalculationMode.msg"
"msg/cdd/YawRateValue.msg"
"msg/cdd/VehicleBreakdownSubCauseCode.msg"
"msg/cdd/Altitude.msg"
"msg/cdd/WMInumber.msg"
"msg/cdd/CollisionRiskSubCauseCode.msg"
"msg/cdd/EmbarkationStatus.msg"
"msg/cdd/PosCentMass.msg"
"msg/cdd/AccelerationControl.msg"
"msg/cdd/VehicleRole.msg"
"msg/cdd/VehicleLengthValue.msg"
"msg/cdd/DrivingLaneStatus.msg"
"msg/cdd/AltitudeValue.msg"
"msg/cdd/LightBarSirenInUse.msg"
"msg/cdd/DeltaAltitude.msg"
"msg/cdd/ItineraryPath.msg"
"msg/cdd/PtActivation.msg"
"msg/cdd/AltitudeConfidence.msg"
"msg/cdd/SequenceNumber.msg"
"msg/cdd/Traces.msg"
"msg/cdd/LongitudinalAccelerationValue.msg"
"msg/cdd/PositioningSolutionType.msg"
"msg/cdd/SpecialTransportType.msg"
"msg/cdd/ProtectedZoneID.msg"
"msg/cdd/ProtectedCommunicationZone.msg"
"msg/cdd/RescueAndRecoveryWorkInProgressSubCauseCode.msg"
"msg/cdd/HumanPresenceOnTheRoadSubCauseCode.msg"
"msg/cdd/CurvatureValue.msg"
"msg/cdd/PosLonCarr.msg"
"msg/cdd/ClosedLanes.msg"
"msg/cdd/LongitudinalAcceleration.msg"
"msg/cdd/RelevanceTrafficDirection.msg"
"msg/cdd/LanePosition.msg"
"msg/cdd/Latitude.msg"
"msg/cdd/Heading.msg"
"msg/cdd/CauseCodeType.msg"
"msg/cdd/PtActivationType.msg"
"msg/cdd/CenDsrcTollingZoneID.msg"
"msg/cdd/CenDsrcTollingZone.msg"
"msg/cdd/HazardousLocationSurfaceConditionSubCauseCode.msg"
"msg/cdd/PosPillar.msg"
"msg/cdd/ItsPduHeader.msg"
"msg/cdd/ValidityDuration.msg"
"msg/cdd/PtActivationData.msg"
"msg/cdd/TurningRadius.msg"
"msg/cdd/SteeringWheelAngleConfidence.msg"
"msg/cdd/SignalViolationSubCauseCode.msg"
"msg/cdd/OpeningDaysHours.msg"
"msg/cdd/StationID.msg"
"msg/cdd/ReferencePosition.msg"
"msg/cdd/HazardousLocationAnimalOnTheRoadSubCauseCode.msg"
"msg/cdd/PhoneNumber.msg"
"msg/cdd/SlowVehicleSubCauseCode.msg"
"msg/cdd/VehicleIdentification.msg"
"msg/cdd/EmergencyPriority.msg"
"msg/cdd/RequestResponseIndication.msg"
"msg/cdd/YawRate.msg"
"msg/cdd/LateralAccelerationValue.msg"
"msg/cdd/DangerousGoodsExtended.msg"
"msg/cdd/VehicleLengthConfidenceIndication.msg"
"msg/cdd/VehicleLength.msg"
"msg/cdd/ActionID.msg"
"msg/cdd/DangerousEndOfQueueSubCauseCode.msg"
"msg/cdd/PathHistory.msg"
"msg/cdd/PostCrashSubCauseCode.msg"
"msg/cdd/AdverseWeatherConditionExtremeWeatherConditionSubCauseCode.msg"
"msg/cdd/HeadingConfidence.msg"
"msg/cdd/RoadworksSubCauseCode.msg"
"msg/cdd/Curvature.msg"
"msg/cdd/LateralAcceleration.msg"
"msg/cdd/RoadType.msg"
"msg/cdd/AccidentSubCauseCode.msg"
"msg/cdd/DangerousGoodsBasic.msg"
"msg/cdd/DeltaLongitude.msg"
"msg/cdd/DeltaLatitude.msg"
"msg/cdd/SpeedLimit.msg"
"msg/cdd/PathPoint.msg"
"msg/cdd/EmergencyVehicleApproachingSubCauseCode.msg"
"msg/rtcmem/RTCMEM.msg"
"msg/ssem/SSEM.msg"
DEPENDENCIES std_msgs
)

ament_package()

